--- a/CalvaryOpebBibleWebsite/Views/Images/ViewImage.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Images/ViewImage.cshtml
@@ -6,50 +6,61 @@
 }
 <div class="jumbotron">
     <div>
-        <hr />
-       
-            @if (Model.Category != "Video")
-            {
-                <dl class="dl-horizontal">
-                    <dt>@Html.DisplayFor(model => model.Title) </dt>
-                    <dd><br /></dd>
-                    <dd><br /></dd>
-                    <dt>@Html.DisplayFor(model => model.Category)</dt>
+    <hr />
 
-                    <dd>
-                        <img style="max-height:700px; max-width:700px" src="@Url.Content("~/Content/Images/" + System.IO.Path.GetFileName(Model.ImagePath))" />
-                    </dd>
-                    <dd><br /></dd>
-                    <dd>@Html.Raw(Model.Details.Replace(Environment.NewLine, "<br/>"))</dd>
-                </dl>
-            }
-        
-        @if (Model.Category == "Video")
-        {
-        <dl class="dl-horizontal" style="float:left;">
-
-            <dt>@Html.DisplayFor(model => model.Title) </dt>
-            <dd><br /></dd>
-            <dd><br /></dd>
-            <dd>@Html.Raw(Model.Details.Replace(Environment.NewLine, "<br/>"))</dd>
-        </dl>
-        <video style="margin-left:20%; height:700px; width:700px" src="@Url.Content("~/Content/Images/" + System.IO.Path.GetFileName(Model.ImagePath))" controls />
-        }
-
-       
-        
-    </div>
-@using (Html.BeginForm())
-        {
-    @Html.AntiForgeryToken()
-    
-    if (Model.Category == "Video")
-            {
-    <div class="form-actions no-color">
-        @Html.ActionLink("Back to Videos", "Videos")
+    @if (Model.Category != "Video")
+    {
+        <div style="float:left;width:50%">
+            <dl class="dl-horizontal">
+                <dt>@Html.DisplayFor(model => model.Title) </dt>
+                <dd><br /></dd>
+                <dd><br /></dd>
+                <dd><br /></dd>
+                <dd><br /></dd>
+                <dt>@Html.DisplayFor(model => model.Category)</dt>
+                <dd><br /></dd>
+                <dd><br /></dd>
+                <dd><br /></dd>
+                <dd>@Html.Raw(Model.Details.Replace(Environment.NewLine, "<br/>"))</dd>
+            </dl>
+        </div>
+    <div>
+        <img style="margin-left:50%;max-height:700px; max-width:700px" src="@Url.Content("~/Content/Images/" + System.IO.Path.GetFileName(Model.ImagePath))" />
     </div>
     }
-    
+
+            @if (Model.Category == "Video")
+        {
+                <div style="float:left;width:50%">
+                    <dl class="dl-horizontal">
+
+                        <dt>@Html.DisplayFor(model => model.Title) </dt>
+                        <dd><br /></dd>
+                        <dd><br /></dd>
+                        <dd><br /></dd>
+
+                        <dd>@Html.Raw(Model.Details.Replace(Environment.NewLine, "<br/>"))</dd>
+                    </dl>
+                </div>
+                <div>
+                    <video style=" height:700px; width:700px" src="@Url.Content("~/Content/Images/" + System.IO.Path.GetFileName(Model.ImagePath))" controls />
+                </div>
+        }
+
+
+
+        </div>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+
+    if (Model.Category == "Video")
+            {
+        <div class="form-actions no-color">
+            @Html.ActionLink("Back to Videos", "Videos")
+        </div>
+    }
+
     if (Model.Category == "Kids")
     {
         <div class="form-actions no-color">
@@ -79,9 +90,9 @@
         </div>
     }
     <br />
-    <div class="form-actions no-color">
-        @Html.ActionLink("Back to Complete List", "Index")
-    </div>
+            <div class="form-actions no-color">
+                @Html.ActionLink("Back to Complete List", "Index")
+            </div>
 
         }
-</div>
+    </div>
