--- a/CalvaryOpebBibleWebsite/Views/Event/Calendar.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Event/Calendar.cshtml
@@ -14,17 +14,11 @@
     <div id="boom">
         <script type="text/javascript">
 
-
-            var events = [];
-            var days = [];
             var monthmonth;
             var month;
             var monthDay;
             var day;
             var year;
-            var monthIncrementer = 0;
-            var yearIncrementer = 0;
-
 
             function calendar(dateString) {
 
@@ -32,21 +26,9 @@
                 if (dateString == null) calDate = new Date()
                 else calDate = new Date(dateString);
 
-                month = calDate.getMonth() + monthIncrementer;
-                year = calDate.getFullYear() + yearIncrementer;
+                month = calDate.getMonth();
+                year = calDate.getFullYear();
 
-                if (month <= 0)
-                {
-                    monthIncrementer = monthIncrementer + 12;
-                    yearIncrementer = yearIncrementer - 1;
-                }
-                if (month >= 13)
-                {
-                    monthIncrementer = monthIncrementer - 12;
-                    yearIncrementer = yearIncrementer + 1;
-                }
-
-                month = calDate.getMonth() + monthIncrementer;
 
                 calDate = new Date(year, month, 1);
 
@@ -85,7 +67,7 @@
                 // Write the table header row of the calendar table
                 document.write("<tr>");
                 document.write("<th id='calendar_head' colspan='7'>");
-                document.write("<button type='button' onClick='monthDown()'><</button>" + monthName[month] + " " + year + "<button type='button' onClick='monthUp()'>></button>");
+                document.write(monthName[month] + " " + year);
                 document.write("</th>");
                 document.write("</tr>");
 
@@ -132,22 +114,7 @@
                 return dayCount[month];
 
             }
-            document.write("foreach month " + month);
-            @foreach (var item in Model)
-    {
-        <text>
-            //var calDate = new Date();
-            //month = calDate.getMonth() + 1;
-            monthmonth = @item.StartDate.ToString().Substring(0, 1);
-            day = @item.StartDate.ToString("MM/dd/yyyy").Substring(3, 2);
-            if (month == monthmonth)
-            {
-                events += @item.EventID;
-                days += day;
-            }
-            </text>
-    }
-            document.write("foreach monthmonth " + monthmonth);
+
             function writeCalDays(calendarDay)
             {
 
@@ -177,18 +144,18 @@
 
                     document.write("<td class='calendar_dates'><p class='date'>" + i + "</p><br />");
                     @foreach (var item in Model)
-            {
-                <text>
-                    if ((@item.StartDate.ToString("MM/dd/yyyy").Substring(0,2) == (newMonth+1)) && (@item.StartDate.ToString("MM/dd/yyyy").Substring(3, 2) == i))
                     {
+                        <text>
+                            if ((@item.StartDate.ToString("MM/dd/yyyy").Substring(0,2) == (newMonth+1)) && (@item.StartDate.ToString("MM/dd/yyyy").Substring(3, 2) == i))
+                            {
 
-                        document.write( "<a href='@Url.Action("Details","Event", new { id = item.EventID})'style='color:Black'>@Html.DisplayFor(modelItem => item.EventName)" + ": "+"<br />"+"@Html.DisplayFor(modelItem => item.EventTime)</a>"+"<br />");
+                                document.write( "<a href='@Url.Action("Details","Event", new { id = item.EventID})'style='color:Black'>@Html.DisplayFor(modelItem => item.EventName)" + ": "+"<br />"+"@Html.DisplayFor(modelItem => item.EventTime)</a>"+"<br />");
 
+
+                            }
+                        </text>
 
                     }
-                    </text>
-
-            }
 
                     document.write("</td>");
 
@@ -203,23 +170,6 @@
                     document.write("</tr>");
                 }
 
-            }
-
-            function monthUp()
-            {
-                monthIncrementer++;
-                //document.getElementById("table").innerHTML = "";
-                //$("calendar_table").html(calendar());
-                var element = document.getElementById("#jumbotron");
-                element.innerHTML = calendar();
-            }
-
-            function monthDown()
-            {
-                monthIncrementer--;
-                //document.getElementById("table").innerHTML = "";
-                $("#table").html('');
-                $("#table").html(''+calendar()+'');
             }
     calendar();
 
